--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="./CSS/navbar.css">
+    <link rel="stylesheet" href="./CSS/section1.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+
+    <link rel="icon" href="./Images/logo.png" type="image/x-icon">
     <title>Chain Dev</title>
 </head>
 <body>
@@ -34,6 +38,27 @@
         </div>
     </div>
     <!----End of Nav bar----->
+    <!----Main content----->
+
+    <div id="maindiv">
+        <div id="maincontent">
+            <div id="leftside1"> <!---left div --->
+                <h1>Get The Latest App From App Stores</h1>
+                <p>Chain App Dev is an app landing page HTML5 template based on Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website to download free CSS templates.</p>
+                <div id="buttons1">
+                    <div class="btns">
+                        <a href="https://www.apple.com/app-store/"><i class="fa fa-apple" style="color: white; margin-right: 5px;" aria-hidden="true"></i>App Store</a>
+                    </div>
+                    <div class="btns">
+                        <a href="https://play.google.com/store"><i class="fa-brands fa-google-play" style="color: white; margin-right: 5px;" aria-hidden="true"></i>Play Store</a>
+                    </div>
+                </div>
+            </div>
+            <div id="rightside1">  <!---Right div --->
+                <img src="./Images/slider-dec.png" alt="phone" id="phoneimg">
+            </div>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/002e03edcf.js" crossorigin="anonymous"></script>
     <script src="./js/navbar.js"></script>
 </body>
