--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
             </div>
         </div>
     </div>
+    <!----End of Main content----->
+    <!----2 section Starts ----->
+
+
+    
     <script src="https://kit.fontawesome.com/002e03edcf.js" crossorigin="anonymous"></script>
     <script src="./js/navbar.js"></script>
 </body>
