--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/section1.css">
+    <link rel="stylesheet" href="./CSS/section2.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="./Images/logo.png" type="image/x-icon">
@@ -61,6 +62,16 @@
     </div>
     <!----End of Main content----->
     <!----2 section Starts ----->
+    <div id="section2">
+        <div id="section2content">
+            <h1>Amazing <span>Services & Features </span> for you</h1>
+            <p id="line">__ __</p>
+            <p id="para">
+                If you need the greatest collection of HTML templates for your business, please visit <a href="www.google.com">TooCSS</a> Blog. If you need to have a contact form PHP script, go to <a href="">our contact page</a> for more information.
+            </p>
+        </div>
+
+    </div>
 
 
     
