--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/section1.css">
     <link rel="stylesheet" href="./CSS/section2.css">
+    <link rel="stylesheet" href="./CSS/section3.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
     <link rel="icon" href="./Images/logo.png" type="image/x-icon">
@@ -71,6 +72,31 @@
             </p>
         </div>
 
+    </div>
+
+    <!----2 section Ends ----->
+    <!----3 Section Starts---->
+
+    <div id="section3">
+        <div id="section3content">
+            <div class="card">
+                
+            <img src="./Images/service-icon-01.png" alt="service1" class="serviceimg">
+                <h2>App Maintenance</h2>
+                <p>You are not allowed to redistribute this template ZIP file on any other website.</p>
+                <a href="">Read More </a>
+
+            </div>
+            <div class="card">
+
+            </div>
+            <div class="card">
+
+            </div>
+            <div class="card">
+
+            </div>
+        </div>
     </div>
 
 
