--- a/index.html
+++ b/index.html
@@ -1,126 +1,254 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/main.css">
-    <link rel="stylesheet" href="./CSS/navbar.css">
-    <link rel="stylesheet" href="./CSS/section1.css">
-    <link rel="stylesheet" href="./CSS/section2.css">
-    <link rel="stylesheet" href="./CSS/section3.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./CSS/main.css" />
+    <link rel="stylesheet" href="./CSS/navbar.css" />
+    <link rel="stylesheet" href="./CSS/section1.css" />
+    <link rel="stylesheet" href="./CSS/section2.css" />
+    <link rel="stylesheet" href="./CSS/section3.css" />
+    <link rel="stylesheet" href="./CSS/section4.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="icon" href="./Images/logo.png" type="image/x-icon">
+    <link rel="icon" href="./Images/logo.png" type="image/x-icon" />
     <title>Chain Dev</title>
-</head>
-<body>
+  </head>
+  <body>
     <!----Nav bar----->
     <div id="navbar">
-        <div id="logo">
-            <a href="https://www.google.com">
-                <img src="./Images/logo.png" alt="logo">
-            </a>
-        </div>
-        <div id="hamburger">
-            <i class="fa-solid fa-bars"></i>
-        </div>
-        <div id="navlist">
-            <ul>
-                <li>Home</li>
-                <li>Services</li>
-                <li>About</li>
-                <li>Pricing</li>
-                <li>Newsletter</li>
-                <li>
-                    <div id="signupbtn">
-                        <a href="">Sign Up Now</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+      <div id="logo">
+        <a href="https://www.google.com">
+          <img src="./Images/logo.png" alt="logo" />
+        </a>
+      </div>
+      <div id="hamburger">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+      <div id="navlist">
+        <ul>
+          <li>Home</li>
+          <li>Services</li>
+          <li>About</li>
+          <li>Pricing</li>
+          <li>Newsletter</li>
+          <li>
+            <div id="signupbtn">
+              <a href="">Sign Up Now</a>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
     <!----End of Nav bar----->
     <!----Main content----->
 
     <div id="maindiv">
-        <div id="maincontent">
-            <div id="leftside1"> <!---left div --->
-                <h1>Get The Latest App From App Stores</h1>
-                <p>Chain App Dev is an app landing page HTML5 template based on Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website to download free CSS templates.</p>
-                <div id="buttons1">
-                    <div class="btns">
-                        <a href="https://www.apple.com/app-store/"><i class="fa fa-apple" style="color: white; margin-right: 5px;" aria-hidden="true"></i>App Store</a>
-                    </div>
-                    <div class="btns">
-                        <a href="https://play.google.com/store"><i class="fa-brands fa-google-play" style="color: white; margin-right: 5px;" aria-hidden="true"></i>Play Store</a>
-                    </div>
-                </div>
+      <div id="maincontent">
+        <div id="leftside1">
+          <!---left div --->
+          <h1>Get The Latest App From App Stores</h1>
+          <p>
+            Chain App Dev is an app landing page HTML5 template based on
+            Bootstrap v5.1.3 CSS layout provided by TemplateMo, a great website
+            to download free CSS templates.
+          </p>
+          <div id="buttons1">
+            <div class="btns">
+              <a href="https://www.apple.com/app-store/"
+                ><i
+                  class="fa fa-apple"
+                  style="color: white; margin-right: 5px"
+                  aria-hidden="true"
+                ></i
+                >App Store</a
+              >
             </div>
-            <div id="rightside1">  <!---Right div --->
-                <img src="./Images/slider-dec.png" alt="phone" id="phoneimg">
+            <div class="btns">
+              <a href="https://play.google.com/store"
+                ><i
+                  class="fa-brands fa-google-play"
+                  style="color: white; margin-right: 5px"
+                  aria-hidden="true"
+                ></i
+                >Play Store</a
+              >
             </div>
+          </div>
         </div>
+        <div id="rightside1">
+          <!---Right div --->
+          <img src="./Images/slider-dec.png" alt="phone" id="phoneimg" />
+        </div>
+      </div>
     </div>
     <!----End of Main content----->
     <!----2 section Starts ----->
     <div id="section2">
-        <div id="section2content">
-            <h1>Amazing <span>Services & Features </span> for you</h1>
-            <p id="line">__ __</p>
-            <p id="para">
-                If you need the greatest collection of HTML templates for your business, please visit <a href="www.google.com">TooCSS</a> Blog. If you need to have a contact form PHP script, go to <a href="">our contact page</a> for more information.
-            </p>
-        </div>
-
+      <div id="section2content">
+        <h1>Amazing <span>Services & Features </span> for you</h1>
+        <p id="line">__ __</p>
+        <p id="para">
+          If you need the greatest collection of HTML templates for your
+          business, please visit <a href="www.google.com">TooCSS</a> Blog. If
+          you need to have a contact form PHP script, go to
+          <a href="">our contact page</a> for more information.
+        </p>
+      </div>
     </div>
 
     <!----2 section Ends ----->
     <!----3 Section Starts---->
 
     <div id="section3">
-        <div id="section3content">
-            <div id="card1" class="card">
-                
-            <img id="a-img" src="./Images/service-icon-01.png" alt="service1" class="serviceimg">
-            <img id="b-img" src="./Images/service-icon-hover-01.png" alt="service1" class="serviceimg">
-                <h3>App Maintenance</h3>
-                <p>You are not allowed to redistribute this template ZIP file on any other website.</p>
-                <a href="">Read More <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> </a>
-
-            </div>
-            <div id="card2" class="card">
-                <img id="a-img" src="./Images/service-icon-02.png" alt="service1" class="serviceimg">
-                <img id="b-img" src="./Images/service-icon-hover-02.png" alt="service1" class="serviceimg">
-                    <h3>Rocket Speed of App</h3>
-                    <p>You are allowed to use the Chain App Dev HTML template. Feel free to modify or edit this layout.</p>
-                    <a href="">Read More <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> </a>
-
-            </div>
-            <div id="card3" class="card">
-                <img id="a-img" src="./Images/service-icon-03.png" alt="service1" class="serviceimg">
-                <img id="b-img" src="./Images/service-icon-hover-03.png" alt="service1" class="serviceimg">
-                    <h3>Multi Workflow Idea</h3>
-                    <p>If this template is beneficial for your work, please support us a little via PayPal. Thank you.</p>
-                    <a href="">Read More <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> </a>
-
-            </div>
-            <div id="card4" class="card">
-                <img id="a-img" src="./Images/service-icon-04.png" alt="service1" class="serviceimg">
-                <img id="b-img" src="./Images/service-icon-hover-04.png" alt="service1" class="serviceimg">
-                    <h3>24/7 Help & Support</h3>
-                    <p>You are not allowed to redistribute this template ZIP file on any other website.</p>
-                    <a href="">Read More <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i> </a>
-
-            </div>
+      <div id="section3content">
+        <div id="card1" class="card">
+          <img
+            id="a-img"
+            src="./Images/service-icon-01.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <img
+            id="b-img"
+            src="./Images/service-icon-hover-01.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <h3>App Maintenance</h3>
+          <p>
+            You are not allowed to redistribute this template ZIP file on any
+            other website.
+          </p>
+          <a href=""
+            >Read More
+            <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+          </a>
         </div>
+        <div id="card2" class="card">
+          <img
+            id="a-img"
+            src="./Images/service-icon-02.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <img
+            id="b-img"
+            src="./Images/service-icon-hover-02.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <h3>Rocket Speed of App</h3>
+          <p>
+            You are allowed to use the Chain App Dev HTML template. Feel free to
+            modify or edit this layout.
+          </p>
+          <a href=""
+            >Read More
+            <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div id="card3" class="card">
+          <img
+            id="a-img"
+            src="./Images/service-icon-03.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <img
+            id="b-img"
+            src="./Images/service-icon-hover-03.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <h3>Multi Workflow Idea</h3>
+          <p>
+            If this template is beneficial for your work, please support us a
+            little via PayPal. Thank you.
+          </p>
+          <a href=""
+            >Read More
+            <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div id="card4" class="card">
+          <img
+            id="a-img"
+            src="./Images/service-icon-04.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <img
+            id="b-img"
+            src="./Images/service-icon-hover-04.png"
+            alt="service1"
+            class="serviceimg"
+          />
+          <h3>24/7 Help & Support</h3>
+          <p>
+            You are not allowed to redistribute this template ZIP file on any
+            other website.
+          </p>
+          <a href=""
+            >Read More
+            <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
     </div>
 
     <!----3 Section Ends----->
 
+    <!----4 Section Starts----->
+    <div id="section4">
+      <div id="section4content">
+        <div id="right-section4">
+          <img src="./Images/about-right-dec.png" alt="" srcset="" />
+        </div>
+        <div id="left-section4">
+          <h1>About <span>What We Do</span> & Who We Are</h1>
+          <span id="section4-line">__ __</span>
+          <p id="section4-para">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eismod tempor incididunt ut labore et dolore magna.
+          </p>
+          <div id="section4-cardmain">
+            <div class="section4-card">
+              <h2>Maintance Problems</h2>
+              <p>Lorem Ipsum Text</p>
+            </div>
+            <div class="section4-card">
+              <h2>24/7 Support & Help</h2>
+              <p>Lorem Ipsum Text</p>
+            </div>
+            <div class="section4-card">
+              <h2>Fixing Issues About</h2>
+              <p>Lorem Ipsum Text</p>
+            </div>
+            <div class="section4-card">
+              <h2>Co. Development</h2>
+              <p>Lorem Ipsum Text</p>
+            </div>
+          </div>
+          <p id="section4-para2">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eismod tempor idunte ut labore et dolore adipiscing magna.
+          </p>
 
+          <button id="trail-btn">Start 14-Day Free Trial</button>
 
-    
-    <script src="https://kit.fontawesome.com/002e03edcf.js" crossorigin="anonymous"></script>
+          <p id="section4-para3">*No Credit Card Required</p>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://kit.fontawesome.com/002e03edcf.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/navbar.js"></script>
-</body>
+  </body>
 </html>
